# santa-vs-grinch

./: .gitignore  Anchor.toml  package.json  tsconfig.json
app/santa-vs-grinch/: README.md  package-lock.json  package.json
app/santa-vs-grinch/anchor/: basic-exports.ts  index.ts  santa_vs_grinch.json  santa_vs_grinch.ts
app/santa-vs-grinch/src/app/: layout.tsx  page.tsx
app/santa-vs-grinch/src/components/basic/: basic-data-access.tsx  basic-feature.tsx  basic-ui.tsx
app/santa-vs-grinch/src/components/game/: game-area.tsx
app/santa-vs-grinch/src/components/ui/: ui-layout.tsx
cli/: command.ts  initialize_config.json
clients/: generate-clients.ts  initialize.ts
programs/santa-vs-grinch/: Cargo.toml
programs/santa-vs-grinch/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/santa-vs-grinch/src/contexts/: bet.rs  bet_v2.rs  claim_winnings.rs  claim_winnings_v2.rs  deposit.rs  end_game.rs  initialize.rs  mod.rs  mystery_box.rs  mystery_box_v2.rs  update_state.rs  update_withdraw_unclaimed.rs  withdraw_creators_winnings.rs  withdraw_fees.rs
programs/santa-vs-grinch/src/state/: config.rs  mod.rs  user.rs
tests/: constants.ts  onChain.types.ts  santa-vs-grinch.ts  utils.ts
